# cc_templates

./: .gitignore  README.md
src/ch1/: CMakeLists.txt
src/ch1/include/: color.hh  max.hh
src/ch1/src/: argument_deduction.cc  max.cc  return_type.cc
